# EDA

./: .gitignore  CMakeLists.txt
Clases/Clase 3/: numeros.c  temp.c  temp2.c
Clases/Clase 4/: return_numero.cpp  saludo.cpp
tareas/tarea-1/: shatira-pike-2023.wzp  tonga-horived-2022.wzp  users.wzp
tareas/tarea-1/src/: ll_Wzzp.c  ll_Wzzp.h  main.c  main.h  usmqp.c  usmqp.h
